--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI= 'mongodb+srv://JUSTI:test123@cluster0.epgpr.mongodb.net/?retryWrites=true&w=majority';
+MONGODB_URI=mongodb+srv://JUSTI:test123@cluster0.epgpr.mongodb.net/mariana
